--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <title>Baltic Robo</title>
   </head>
   <body>
